I don't know what I'm doing

--- a/Project_PO.csproj
+++ b/Project_PO.csproj
@@ -84,8 +84,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddNewWaiter.xaml.cs">
+      <DependentUpon>AddNewWaiter.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Bill.xaml.cs">
       <DependentUpon>Bill.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DataBank.cs" />
+    <Compile Include="MainFormAdmin.xaml.cs">
+      <DependentUpon>MainFormAdmin.xaml</DependentUpon>
     </Compile>
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
@@ -93,11 +100,20 @@
     <Compile Include="Reservations1.xaml.cs">
       <DependentUpon>Reservations1.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SqlCommands.cs" />
+    <Page Include="AddNewWaiter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Bill.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MainFormAdmin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
